# biohackrag

./: .cursorignore  .gitignore  dave_asprey_link_tree.md  langgraph_convert.py  main.py  possible_schema.py  pyproject.toml  sort_episodes.py  sort_podcast_episodes.py  test_mongo_validation.py
backend/: .dockerignore  Dockerfile.job  aug-24-25_nextsteps.txt  beanie_reference_guide.md  import_troubleshooting_guide.md  main.py  mcp_server.py  pyproject.toml  requirements.job.txt  requirements.txt  transcript_test.txt  youtube_test.py
backend/.cursor/rules/: transcript_ingestion.mdc
backend/ephemeral_documentation/: todays_agenda.txt
backend/scraping_ops/: Dockerfile  deploy_and_schedule.sh  deploy_and_schedule_command.txt  docker-compose.yml  ep_update_selenium.py  find_episodes_selenium.py  gcloudscripts.txt  imagenames.txt  parse_transcript_page.py  requirements.txt  update-log-mounts.ps1  update_mount.sh  workflow_report.md
backend/scripts/: deploy_enhancer_job.sh
backend/src/: mongo_schema_output.py  mongo_schema_overwrite.py  mongo_schema_overwrite_documentation.md  mongo_schemas.py  seeds.py  store_full_transcripts.py  store_transcript_links.py
backend/src/config/: firecrawl_client.py  headers.py  langsmith_client.py  llm_setup.py  mongo_setup.py  notes.txt  settings.py  youtube_client.py
backend/src/ingestion/indexing/: lg_transcript_tests.ipynb  output_2.txt  summary_output_one.txt  transcript_ingestion.py  transcript_ingestion_graph.py  transcript_tests.ipynb
backend/src/ingestion/indexing/prompts/: langsmith_client.py  transcript_prompts.py
backend/src/ingestion/indexing/tools/: research_tools.py  transcript_ingestion_tools.py
backend/src/ingestion/utils/: transcript_to_document.py  youtube_api_utils.py
backend/src/schemas/: transcript_llm_schemas.py
backend/webpage_parsing/: check_resources.py  episode_enhacement_pipeline.py  episode_summaries.py  episode_transfer_seed.py  fast_update.py  html_file_saver.py  job_cli.py  mongo_recent_data.py  parsing_tests.py  store_transcript_links.py  webpage_ep_parsing.py
src/: async_playwright_scraper.py  async_selenium_parser.py  main.py  mongo_insert.py  mongo_schemas.py  mongo_schemas_test.py  test_parser_recent.py  test_url_content.py  (+1 more)
(+15 files in other folders)
